crates/ruff_linter/src/rules/flake8_errmsg/snapshots/ruff_linter__rules__flake8_errmsg__tests__preview.snap
---
source: crates/ruff_linter/src/rules/flake8_errmsg/mod.rs
---
EM101_byte_string.py:2:24: EM101 (raw-string-in-exception) [*] Exception must not use a string literal, assign to variable first
  |
1 | def f_byte():
2 |     raise RuntimeError(b"This is an example exception")
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ EM101 (raw-string-in-exception)
  |
  = help: Assign to variable; remove string literal

ℹ Unsafe fix
1 1 | def f_byte():
2   |-    raise RuntimeError(b"This is an example exception")
  2 |+    msg = b"This is an example exception"
  3 |+    raise RuntimeError(msg)
3 4 | 
4 5 | 
5 6 | def f_byte_empty():

EM101_byte_string.py:6:24: EM101 (raw-string-in-exception) [*] Exception must not use a string literal, assign to variable first
  |
5 | def f_byte_empty():
6 |     raise RuntimeError(b"")
  |                        ^^^ EM101 (raw-string-in-exception)
  |
  = help: Assign to variable; remove string literal

ℹ Unsafe fix
3 3 | 
4 4 | 
5 5 | def f_byte_empty():
6   |-    raise RuntimeError(b"")
  6 |+    msg = b""
  7 |+    raise RuntimeError(msg)
